tests/SyntaxError/Test25/test25.c
int main()
{
	for (int i=0; i<10; int j=i+1 ){
		int a=i*2;	
	}

}

